deploy/ui/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finops-ui
  namespace: finops
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: finops-ui
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app.kubernetes.io/name: finops-ui
    spec:
      containers:
      - name: ui 
        image: ghcr.io/bolb23/finops-ui:main
        ports:
        - containerPort: 80
