deploy/ui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: finops-ui
  namespace: finops 
spec:
  selector:
    app.kubernetes.io/name: finops-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
